--- a/OnlineMonitoringSystemAPI/OnlineMonitoringSystemAPI.csproj
+++ b/OnlineMonitoringSystemAPI/OnlineMonitoringSystemAPI.csproj
@@ -90,6 +90,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -132,6 +133,7 @@
   <ItemGroup>
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\DataController.cs" />
     <Compile Include="Controllers\ElementsController.cs" />
     <Compile Include="Controllers\LocationController.cs" />
     <Compile Include="DataAccess\_51Data.cs" />
@@ -141,9 +143,12 @@
     <Compile Include="Models\BusinessModels\LocaInfo_Tab.cs" />
     <Compile Include="Models\BusinessModels\Image_Tab.cs" />
     <Compile Include="Models\BusinessModels\LocationInfo.cs" />
+    <Compile Include="Models\BusinessModels\Elements.cs" />
     <Compile Include="Models\CENTER_RTUCHANGE.cs" />
     <Compile Include="Models\CENTER_SERVER.cs" />
     <Compile Include="Models\CENTER_STARTSTATE.cs" />
+    <Compile Include="Models\ParameterModels\GetDataForElementsParameter.cs" />
+    <Compile Include="Models\ParameterModels\STCDParameter.cs" />
     <Compile Include="Models\WX _AlarmCondition.cs" />
     <Compile Include="Models\WX_AlarmInfo.cs" />
     <Compile Include="Models\WX_User.cs" />
@@ -179,6 +184,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Properties\PublishProfiles\TESTapi.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
