--- a/OnlineMonitoringSystemAPI/Web.config
+++ b/OnlineMonitoringSystemAPI/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="connStr" connectionString="server=SQLOLEDB.1;Password=_cy123!@#$%;Persist Security Info=True;User ID=sa;Initial Catalog=CY_GPS_Test;Data Source=49.4.69.20" providerName="System.Data.SqlClient" />
+    <add name="connStr" connectionString="server=SQLOLEDB.1;Password=_qw123;Persist Security Info=True;User ID=sa;Initial Catalog=mysk_db;Data Source=211.159.164.175" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
